# Project

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  constraints.txt
.github/: PULL_REQUEST_TEMPLATE.md
artifacts/: README.md
contracts/: README.md  blotter.schema.json  evidence-pack.schema.json  opportunity-card.schema.json  provenance.md  research-brief.schema.json  ws-protocol.md
data/: README.md
docs/: ARCH_FREEZE_v2.md  RELEASE_GATES.md  bbg-bql-smoke.md  deployment.md  desk-live.md  diagrams.md
engine/: ARCHITECTURE.md  README.md  pyproject.toml
engine/config/: bloomberg.yaml  events.csv  logging.yaml  settings.yaml  signals.yaml
engine/tests/unit/: test_stage0.py  test_stage1_data.py  test_stage2_surface.py  test_stage3_calibration.py  test_stage4_carry.py  test_stage5_signals.py
engine/volwatch/: config.py
engine/volwatch/ai/: context.py
engine/volwatch/analytics/: arbitrage.py  black.py  carry.py  fit.py  forward_vol.py  realized.py  sabr.py  ssvi.py  surface.py
engine/volwatch/core/: calendars.py  conventions.py  models.py
engine/volwatch/data/: assemble.py  bloomberg.py  bql_provider.py  events.py  pipeline.py  provider.py  store.py  tickers.py  validation.py
engine/volwatch/signals/: base.py  engine.py  events.py  relative_value.py  richcheap.py
evaluation/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
prompts/: README.md  analyst_triage.md
scripts/: build.sh  dev.sh  record_session.py  release.sh  replay_session.py  (+6 more)
(+106 files in other folders)
